Prevent map stretch on resize.

--- a/app/assets/stylesheets/templates/_content.css.scss
+++ b/app/assets/stylesheets/templates/_content.css.scss
@@ -192,10 +192,6 @@
       &.video, &.photo, &.map {
           border-color: $green;
       }
-
-      &.map .image {
-        height: 240px;
-      }
     }
 
     .card-settings {
